# EpiLands

./: .gitignore  LICENSE  README.md  pyproject.toml  req.txt  requirements.txt  setup.py
docs/: conf.py  index.rst
epilands/: __init__.py  config.py  experimental_funcs.py  image_model.py  odlinit.py
epilands/_read_write_deprecated/: __init__.py  _read_dataframe_from_h5.py
epilands/feature_embedding/: _hsne_dev.py  _mds.py  _tsne.py  _umap.py
epilands/feature_model_construction/: __init__.py  _miel_distance.py  _miel_distance_centroidvector.py
epilands/feature_preprocessing/: __init__.py  _bootstrap_df.py  _calculate_sample_centroids_from_bins.py  _misc.py  _thresholding.py
epilands/feature_visualization/: _boxplot_scatter.py  _categorical_scatter.py  _catplot_scatter.py  _component_analysis.py  _generic_scatter.py  _heatmap.py  _plotting_utils.py  _threshold_histogram.py  _umap_scatter.py
epilands/generic_read_write/: _read_all_h5_outputs.py
epilands/image_preprocessing/: __init__.py  _calculate_2D_projection.py  _cellselecter.py  _extract_object.py  _fit_illumination_correction.py  _get_object_bbox.py  _glaylconvert.py  _lin3d_interp.py  _object_cookie_cutter.py  _resize_image.py
epilands/image_qc/: __init__.py  _percent_max.py  _power_spectrum.py  _power_spetrum_loglog_slope.py
epilands/image_read_write/: __init__.py  _illumination_correction_model.py  _read_images.py  _read_qc_data.py  _read_zstack.py  _save_segmentation_data.py
epilands/image_segmentation/: _segment_images_stardist.py
epilands/image_visualization/: __init__.py  _plot_heatmap.py  (+8 more)
(+62 files in other folders)
