[tool.poetry]
name = "epilands"
version = "0.1.0"
description = "A package for analyzing epigenetic landscapes"
authors = ["Martin <martin.alvarez.kuglen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
BaSiCPy = "1.0.0"
stardist = "0.8.3"
h5py = "3.6.0"
matplotlib = "3.5.3"
pandas = "1.4.3"
pip = "22.2.2"
seaborn = "0.11.2"
scipy = "1.9.0"
plotly = "5.14.0"
tifffile = "2022.8.12"
numba = "0.56.0"
numpy = "1.22.0"
scikit-image = "0.19.3"
scikit-learn = "1.2.2"
tqdm = "4.64.0"
umap-learn = "0.5.3"
beartype = "0.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
